# camel-wasm

./: README.adoc  pom.xml
src/go/: build.sh  to_upper.go  to_upper.wasm
src/main/java/io/github/lburgazzoli/camel/component/wasm/: Wasm.java  WasmComponent.java  WasmConfiguration.java  WasmEndpoint.java  WasmFunction.java  WasmLanguage.java  WasmProducer.java  WasmSupport.java
src/rust/: build.sh  to_upper.rs  to_upper.wasm
src/test/go/: go.mod  main.go
src/test/java/io/github/lburgazzoli/camel/component/wasm/: WasmComponentTest.java  WasmTest.java
src/test/resources/: functions.wasm  to_upper.wasm
src/test/rust/: Cargo.toml  build.sh  functions.rs  to_upper.rs
src/test/rust/src/: lib.rs
